content/docs/v0.0.1/reference/google.kubeform.com/ComputeVPNGateway.md
---
title: ComputeVPNGateway
menu:
  docs_v0.0.1:
    identifier: computevpngateway-google.kubeform.com
    name: ComputeVPNGateway
    parent: google.kubeform.com-reference
    weight: 1
menu_name: docs_v0.0.1
section_menu_id: reference
info:
  version: v0.0.1
---

## ComputeVPNGateway
| Field | Type | Description |
| ------ | ----- | ----------- |
| `apiVersion` | string | `google.kubeform.com/v1alpha1` |
|    `kind` | string | `ComputeVPNGateway` |
| `metadata` | ***[Kubernetes meta/v1.ObjectMeta](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.13/#objectmeta-v1-meta)***|Refer to the Kubernetes API documentation for the fields of the `metadata` field.|
| `spec` | ***[ComputeVPNGatewaySpec](#ComputeVPNGatewaySpec)***||
| `status` | ***[ComputeVPNGatewayStatus](#ComputeVPNGatewayStatus)***||
## ComputeVPNGatewaySpec
##### (Appears on:[ComputeVPNGateway](#ComputeVPNGateway), [ComputeVPNGatewayStatus](#ComputeVPNGatewayStatus))
| Field | Type | Description |
| ------ | ----- | ----------- |
| `providerRef` | ***[Kubernetes core/v1.LocalObjectReference](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.13/#localobjectreference-v1-core)***||
| `id` | ***string***||
| `creationTimestamp` | ***string***| ***(Optional)*** |
| `description` | ***string***| ***(Optional)*** |
| `name` | ***string***||
| `network` | ***string***||
| `project` | ***string***| ***(Optional)*** |
| `region` | ***string***| ***(Optional)*** |
| `selfLink` | ***string***| ***(Optional)*** |
## ComputeVPNGatewayStatus
##### (Appears on:[ComputeVPNGateway](#ComputeVPNGateway))
| Field | Type | Description |
| ------ | ----- | ----------- |
| `observedGeneration` | ***int64***| ***(Optional)*** Resource generation, which is updated on mutation by the API Server.|
| `output` | ***[ComputeVPNGatewaySpec](#ComputeVPNGatewaySpec)***| ***(Optional)*** |
| `state` | ***kubeform.dev/kubeform/apis.State***| ***(Optional)*** |
---
