content/docs/v2020.10.30/reference/google.kubeform.com/ComputeVPNGateway.md
---
title: ComputeVPNGateway
menu:
  docs_v2020.10.30:
    identifier: computevpngateway-google.kubeform.com
    name: ComputeVPNGateway
    parent: google.kubeform.com-reference
    weight: 1
menu_name: docs_v2020.10.30
section_menu_id: reference
info:
  community: v0.3.0
  installer: v0.3.0
  version: v2020.10.30
---

## ComputeVPNGateway
| Field | Type | Description |
| ------ | ----- | ----------- |
| `apiVersion` | string | `google.kubeform.com/v1alpha1` |
|    `kind` | string | `ComputeVPNGateway` |
| `metadata` | ***[Kubernetes meta/v1.ObjectMeta](https://v1-18.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.18/#objectmeta-v1-meta)***|Refer to the Kubernetes API documentation for the fields of the `metadata` field.|
| `spec` | ***[ComputeVPNGatewaySpec](#computevpngatewayspec)***||
| `status` | ***[ComputeVPNGatewayStatus](#computevpngatewaystatus)***||
## ComputeVPNGatewaySpec

Appears on:[ComputeVPNGateway](#computevpngateway), [ComputeVPNGatewayStatus](#computevpngatewaystatus)

| Field | Type | Description |
| ------ | ----- | ----------- |
| `providerRef` | ***[Kubernetes core/v1.LocalObjectReference](https://v1-18.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.18/#localobjectreference-v1-core)***||
| `id` | ***string***||
| `creationTimestamp` | ***string***| ***(Optional)*** |
| `description` | ***string***| ***(Optional)*** |
| `gatewayID` | ***int64***| ***(Optional)*** |
| `name` | ***string***||
| `network` | ***string***||
| `project` | ***string***| ***(Optional)*** |
| `region` | ***string***| ***(Optional)*** |
| `selfLink` | ***string***| ***(Optional)*** |
## ComputeVPNGatewayStatus

Appears on:[ComputeVPNGateway](#computevpngateway)

| Field | Type | Description |
| ------ | ----- | ----------- |
| `observedGeneration` | ***int64***| ***(Optional)*** Resource generation, which is updated on mutation by the API Server.|
| `output` | ***[ComputeVPNGatewaySpec](#computevpngatewayspec)***| ***(Optional)*** |
| `state` | ***kubeform.dev/kubeform/apis/base/v1alpha1.State***| ***(Optional)*** |
| `phase` | ***[Phase](#phase)***| ***(Optional)*** |
## Phase(`string` alias)

Appears on:[ComputeVPNGatewayStatus](#computevpngatewaystatus)

---
